Set up Swagger Docs.
