# data/models/ingredient.go
@@ -2,5 +2,6 @@ package models
 
 type Ingredient struct {
 	Base
-	Name string `json:"name"`
+	Name     string `json:"name"`
+	ImageURL string `json:"image_url"`
 }
